Updated flex box containers to align text & images correctly

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,11 +5,15 @@ body {
 img {
   width: 100px;
   height: 100px;
+  align-self:center;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display:flex;
+  justify-content: center;
+  margin-bottom:32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +27,38 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.container {
+  flex-direction:row;
+  display:flex;
+  justify-content: space-between;
+  text-align:center;
+  gap:52px;
+}
+
+.barberry-container {
+  display:flex;
+  flex-direction:column;
+  flex:1;
+  margin-left:200px;
+}
+
+.chilli-container {
+  display:flex;
+  flex-direction:column;
+  flex:1;
+}
+
+.pepper-container {
+  display:flex;
+  flex-direction:column;
+  flex:1;
+}
+
+.saffron-container {
+  display:flex;
+  flex-direction:column;
+  flex:1;
+  margin-right:200px;
 }
